GearsetPOC/force-app/main/default/objects/Trade_Sales_Account__c/Trade_Sales_Account__c.object-meta.xml
<CustomObject>
    <label>Commercial Entity</label>
    <nameField>
        <label>Client Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commercial Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>