GearsetPOC/force-app/main/default/objects/Trade_Sales_Account__c/fields/Account_Merged__c.field-meta.xml
<CustomField>
    <fullName>Account_Merged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Merged information - Will be filled in if field: Trade_Contract_Merged__c on Trade Contracts companies is TRUE</description>
    <inlineHelpText>The account is merged when checkbox is ticket - information on merge can be found on Trade Contracts Companies related Record</inlineHelpText>
    <label>Account Merged</label>
    <type>Checkbox</type>
</CustomField>