GearsetPOC/force-app/main/default/objects/Trade_Sales_Account__c/fields/Additional_TMC_Link_1__c.field-meta.xml
<CustomField>
    <fullName>Additional_TMC_Link_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional TMC Link</label>
    <referenceTo>Trade_Sales_Account__c</referenceTo>
    <relationshipLabel>Managed Corporate Client (Add #1)</relationshipLabel>
    <relationshipName>Commercial_Entities1</relationshipName>
    <type>Lookup</type>
</CustomField>