GearsetPOC/force-app/main/default/objects/Trade_Sales_Account__c/fields/Address_BE__c.field-meta.xml
<CustomField>
    <fullName>Address_BE__c</fullName>
    <formula>Address_Line_1_BE__c + &quot; &quot; + Address_Line_2_BE__c + &quot; &quot; + Post_Code_Zip_BE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address (BE)</label>
    <type>Text</type>
</CustomField>