GearsetPOC/force-app/main/default/objects/Trade_Sales_Account__c/fields/Address_FR__c.field-meta.xml
<CustomField>
    <fullName>Address_FR__c</fullName>
    <formula>Address_Line_1_FR__c + &quot; &quot; + Address_Line_2_FR__c + &quot; &quot; + Post_Code_Zip_FR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address (FR)</label>
    <type>Text</type>
</CustomField>