GearsetPOC/force-app/main/default/objects/Trade_Sales_Account__c/fields/Address_Line_2_NL__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_2_NL__c</fullName>
    <label>Address Line 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>