GearsetPOC/force-app/main/default/objects/Trade_Sales_Account__c/fields/Address_Other__c.field-meta.xml
<CustomField>
    <fullName>Address_Other__c</fullName>
    <formula>Address_Line_1_Other__c + &quot; &quot; + Address_Line_2_Other__c + &quot; &quot; +  Post_Code_Zip_Other__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address (Other)</label>
    <type>Text</type>
</CustomField>