GearsetPOC/force-app/main/default/objects/Trade_Sales_Account__c/fields/Address_UK__c.field-meta.xml
<CustomField>
    <fullName>Address_UK__c</fullName>
    <formula>Address_Line_1_UK__c  + &quot; &quot; + Address_Line_2_UK__c + &quot; &quot; + Post_Code_Zip_UK__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address (UK)</label>
    <type>Text</type>
</CustomField>