GearsetPOC/force-app/main/default/objects/Trade_Sales_Account__c/fields/Alliance__c.field-meta.xml
<CustomField>
    <fullName>Alliance__c</fullName>
    <label>Alliance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One World</fullName>
            </value>
            <value>
                <fullName>Star</fullName>
            </value>
            <value>
                <fullName>Sky Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>