GearsetPOC/force-app/main/default/objects/Trade_Sales_Account__c/fields/BE_TMC_Owner__c.field-meta.xml
<CustomField>
    <fullName>BE_TMC_Owner__c</fullName>
    <formula>SNCB_Managed_TMC__r.Owner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BE TMC Owner</label>
    <type>Text</type>
</CustomField>