GearsetPOC/force-app/main/default/objects/Trade_Sales_Account__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Redemption Partner</fullName>
            </value>
            <value>
                <fullName>Event Management</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Chamber of Commerce</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Publication</fullName>
            </value>
            <value>
                <fullName>Industry Body / Association</fullName>
            </value>
            <value>
                <fullName>GDS</fullName>
            </value>
            <value>
                <fullName>Tourist Board</fullName>
            </value>
            <value>
                <fullName>Marketing Service</fullName>
            </value>
            <value>
                <fullName>SBT</fullName>
            </value>
            <value>
                <fullName>Memberships</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
            <value>
                <fullName>Social Media Agency</fullName>
            </value>
            <value>
                <fullName>Partner Other</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Group Operator</fullName>
            </value>
            <value>
                <fullName>Inbounder</fullName>
            </value>
            <value>
                <fullName>On-Line Portal</fullName>
            </value>
            <value>
                <fullName>Tour Operator</fullName>
            </value>
            <value>
                <fullName>Ski</fullName>
            </value>
            <value>
                <fullName>Student Operator</fullName>
            </value>
            <value>
                <fullName>Railway/TOC</fullName>
            </value>
            <value>
                <fullName>Representative</fullName>
            </value>
            <value>
                <fullName>International Managed Accounts</fullName>
            </value>
            <value>
                <fullName>Sub Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>