GearsetPOC/force-app/main/default/objects/Trade_Sales_Account__c/fields/City_UK__c.field-meta.xml
<CustomField>
    <fullName>City_UK__c</fullName>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>