GearsetPOC/force-app/main/default/objects/Trade_Sales_Account__c/fields/Comments_Airlines__c.field-meta.xml
<CustomField>
    <fullName>Comments_Airlines__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>