GearsetPOC/force-app/main/default/objects/Trade_Sales_Account__c/fields/Competitor_Offer_Activity_BE__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Offer_Activity_BE__c</fullName>
    <label>Competitor Offer / Activity</label>
    <type>TextArea</type>
</CustomField>