GearsetPOC/force-app/main/default/objects/Trade_Sales_Account__c/fields/Connect_In__c.field-meta.xml
<CustomField>
    <fullName>Connect_In__c</fullName>
    <label>Connect In</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>Paris</fullName>
            </value>
            <value>
                <fullName>Brussels</fullName>
            </value>
            <value>
                <fullName>Amsterdam</fullName>
            </value>
            <value>
                <fullName>Frankfurt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>