GearsetPOC/force-app/main/default/objects/Trade_Sales_Account__c/fields/Country_BE__c.field-meta.xml
<CustomField>
    <fullName>Country_BE__c</fullName>
    <defaultValue>&quot;Belgium&quot;</defaultValue>
    <label>Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>