GearsetPOC/force-app/main/default/objects/Trade_Sales_Account__c/fields/Country_Other__c.field-meta.xml
<CustomField>
    <fullName>Country_Other__c</fullName>
    <label>Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>