GearsetPOC/force-app/main/default/objects/Trade_Sales_Account__c/fields/Country_UK__c.field-meta.xml
<CustomField>
    <fullName>Country_UK__c</fullName>
    <defaultValue>&quot;United Kingdom&quot;</defaultValue>
    <label>Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>