GearsetPOC/force-app/main/default/objects/Trade_Sales_Account__c/fields/County_State__c.field-meta.xml
<CustomField>
    <fullName>County_State__c</fullName>
    <label>County / State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>