GearsetPOC/force-app/main/default/objects/Trade_Sales_Account__c/fields/Date_Updated_TP_UK__c.field-meta.xml
<CustomField>
    <fullName>Date_Updated_TP_UK__c</fullName>
    <label>Date Updated</label>
    <type>Date</type>
</CustomField>