GearsetPOC/force-app/main/default/objects/Trade_Sales_Account__c/fields/Directions__c.field-meta.xml
<CustomField>
    <fullName>Directions__c</fullName>
    <label>Directions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>