GearsetPOC/force-app/main/default/objects/Trade_Sales_Account__c/fields/Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Channel__c</fullName>
    <label>Distribution Channel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call Centre</fullName>
            </value>
            <value>
                <fullName>Appointed Travel Agents</fullName>
            </value>
            <value>
                <fullName>Raileurope.com</fullName>
            </value>
            <value>
                <fullName>REI Groups</fullName>
            </value>
            <value>
                <fullName>Agent.raileurope.com</fullName>
            </value>
            <value>
                <fullName>Rail Europe Shops</fullName>
            </value>
            <value>
                <fullName>General Sales Agents</fullName>
            </value>
            <value>
                <fullName>Ticket Offices</fullName>
            </value>
            <value>
                <fullName>Internet Consumer Sales</fullName>
            </value>
            <value>
                <fullName>Internet Trade Sales</fullName>
            </value>
            <value>
                <fullName>Group Department</fullName>
            </value>
            <value>
                <fullName>TMC</fullName>
            </value>
            <value>
                <fullName>Stations</fullName>
            </value>
            <value>
                <fullName>SNCB</fullName>
            </value>
            <value>
                <fullName>SNCF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>