GearsetPOC/force-app/main/default/objects/Trade_Sales_Account__c/fields/Distribution_System__c.field-meta.xml
<CustomField>
    <fullName>Distribution_System__c</fullName>
    <label>Distribution System</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amadeus</fullName>
            </value>
            <value>
                <fullName>Galileo</fullName>
            </value>
            <value>
                <fullName>Axess</fullName>
            </value>
            <value>
                <fullName>Hermes</fullName>
            </value>
            <value>
                <fullName>Sabre</fullName>
            </value>
            <value>
                <fullName>Apollo</fullName>
            </value>
            <value>
                <fullName>Worldspan</fullName>
            </value>
            <value>
                <fullName>Elgar Direct</fullName>
            </value>
            <value>
                <fullName>White Label</fullName>
            </value>
            <value>
                <fullName>Mosaique</fullName>
            </value>
            <value>
                <fullName>Atlantis</fullName>
            </value>
            <value>
                <fullName>Ravel</fullName>
            </value>
            <value>
                <fullName>TPV</fullName>
            </value>
            <value>
                <fullName>Web Resarail</fullName>
            </value>
            <value>
                <fullName>Euronet</fullName>
            </value>
            <value>
                <fullName>Infini</fullName>
            </value>
            <value>
                <fullName>Abacus</fullName>
            </value>
            <value>
                <fullName>Multicom Pharos</fullName>
            </value>
            <value>
                <fullName>EDI Pharos</fullName>
            </value>
            <value>
                <fullName>Carina</fullName>
            </value>
            <value>
                <fullName>Shares</fullName>
            </value>
            <value>
                <fullName>EDI Anite</fullName>
            </value>
            <value>
                <fullName>Socrate</fullName>
            </value>
            <value>
                <fullName>Amadeus Elgar</fullName>
            </value>
            <value>
                <fullName>Sabre Elgar</fullName>
            </value>
            <value>
                <fullName>Worldspan Elgar</fullName>
            </value>
            <value>
                <fullName>SITA</fullName>
            </value>
            <value>
                <fullName>XML Link</fullName>
            </value>
            <value>
                <fullName>Direct Mode</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>