GearsetPOC/force-app/main/default/objects/Trade_Sales_Account__c/fields/DocuSign_Status__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This Related list shows the status of the sent docusign documents</description>
    <label>DocuSign Status</label>
    <referenceTo>dsfs__DocuSign_Status__c</referenceTo>
    <relationshipLabel>Commercial Entities</relationshipLabel>
    <relationshipName>Commercial_Entities</relationshipName>
    <type>Lookup</type>
</CustomField>