GearsetPOC/force-app/main/default/objects/Trade_Sales_Account__c/fields/Fare_Range__c.field-meta.xml
<CustomField>
    <fullName>Fare_Range__c</fullName>
    <label>Fare Range</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADS Public</fullName>
            </value>
            <value>
                <fullName>ADS RIT</fullName>
            </value>
            <value>
                <fullName>ADS Group</fullName>
            </value>
            <value>
                <fullName>German Connex</fullName>
            </value>
            <value>
                <fullName>FR Province Pub</fullName>
            </value>
            <value>
                <fullName>FR Provinces Grp</fullName>
            </value>
            <value>
                <fullName>FR Province RIT</fullName>
            </value>
            <value>
                <fullName>ABS Public</fullName>
            </value>
            <value>
                <fullName>ABS RIT</fullName>
            </value>
            <value>
                <fullName>ABS Group</fullName>
            </value>
            <value>
                <fullName>Ski Public</fullName>
            </value>
            <value>
                <fullName>Ski RIT</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>RIT</fullName>
            </value>
            <value>
                <fullName>Promo</fullName>
            </value>
            <value>
                <fullName>Lyon SOF Pub</fullName>
            </value>
            <value>
                <fullName>Lyon SOF RIT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>