GearsetPOC/force-app/main/default/objects/Trade_Sales_Account__c/fields/FR__c.field-meta.xml
<CustomField>
    <fullName>FR__c</fullName>
    <label>SBT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>KDS</fullName>
            </value>
            <value>
                <fullName>Get There</fullName>
            </value>
            <value>
                <fullName>Traveldoo</fullName>
            </value>
            <value>
                <fullName>HRG</fullName>
            </value>
            <value>
                <fullName>Amadeus Aergo</fullName>
            </value>
            <value>
                <fullName>AcTM</fullName>
            </value>
            <value>
                <fullName>Click Book</fullName>
            </value>
            <value>
                <fullName>Rearden</fullName>
            </value>
            <value>
                <fullName>OOTO</fullName>
            </value>
            <value>
                <fullName>Freeway</fullName>
            </value>
            <value>
                <fullName>Concur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>