GearsetPOC/force-app/main/default/objects/Trade_Sales_Account__c/fields/FR_TMC_Owner__c.field-meta.xml
<CustomField>
    <fullName>FR_TMC_Owner__c</fullName>
    <formula>SNCF_Managed_TMC__r.Owner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FR TMC Owner</label>
    <type>Text</type>
</CustomField>