GearsetPOC/force-app/main/default/objects/Trade_Sales_Account__c/fields/Frequent_Flyer_Contract__c.field-meta.xml
<CustomField>
    <fullName>Frequent_Flyer_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Frequent Flyer Contract</label>
    <type>Checkbox</type>
</CustomField>