GearsetPOC/force-app/main/default/objects/Trade_Sales_Account__c/fields/Frequent_Flyer_Contract_End__c.field-meta.xml
<CustomField>
    <fullName>Frequent_Flyer_Contract_End__c</fullName>
    <label>Frequent Flyer Contract End</label>
    <type>Date</type>
</CustomField>