GearsetPOC/force-app/main/default/objects/Trade_Sales_Account__c/fields/Google_Maps__c.field-meta.xml
<CustomField>
    <fullName>Google_Maps__c</fullName>
    <label>Google Maps</label>
    <type>Url</type>
</CustomField>