GearsetPOC/force-app/main/default/objects/Trade_Sales_Account__c/fields/Google_Maps_BE__c.field-meta.xml
<CustomField>
    <fullName>Google_Maps_BE__c</fullName>
    <label>Google Maps (BE)</label>
    <type>Url</type>
</CustomField>