GearsetPOC/force-app/main/default/objects/Trade_Sales_Account__c/fields/Google_Maps_FR__c.field-meta.xml
<CustomField>
    <fullName>Google_Maps_FR__c</fullName>
    <label>Google Maps (FR)</label>
    <type>Url</type>
</CustomField>