GearsetPOC/force-app/main/default/objects/Trade_Sales_Account__c/fields/Google_Maps_Other__c.field-meta.xml
<CustomField>
    <fullName>Google_Maps_Other__c</fullName>
    <label>Google Maps (Other)</label>
    <type>Url</type>
</CustomField>