GearsetPOC/force-app/main/default/objects/Trade_Sales_Account__c/fields/Google_Maps_UK__c.field-meta.xml
<CustomField>
    <fullName>Google_Maps_UK__c</fullName>
    <label>Google Maps (UK)</label>
    <type>Url</type>
</CustomField>