GearsetPOC/force-app/main/default/objects/Trade_Sales_Account__c/fields/How_Much_Is_This_Followed_NL__c.field-meta.xml
<CustomField>
    <fullName>How_Much_Is_This_Followed_NL__c</fullName>
    <label>How Much Is This Followed?</label>
    <type>TextArea</type>
</CustomField>