GearsetPOC/force-app/main/default/objects/Trade_Sales_Account__c/fields/HQ__c.field-meta.xml
<CustomField>
    <fullName>HQ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HQ</label>
    <type>Checkbox</type>
</CustomField>