GearsetPOC/force-app/main/default/objects/Trade_Sales_Account__c/fields/IATA_Accounting__c.field-meta.xml
<CustomField>
    <fullName>IATA_Accounting__c</fullName>
    <label>IATA Accounting</label>
    <length>100</length>
    <type>Text</type>
</CustomField>