GearsetPOC/force-app/main/default/objects/Trade_Sales_Account__c/fields/IATA_Designator__c.field-meta.xml
<CustomField>
    <fullName>IATA_Designator__c</fullName>
    <label>IATA Designator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0S Spice Air (India)</fullName>
            </value>
            <value>
                <fullName>1A Amadeus Global Travel Distribut</fullName>
            </value>
            <value>
                <fullName>1B Abacus International (Singapore</fullName>
            </value>
            <value>
                <fullName>1C EDS Information Business (Switz</fullName>
            </value>
            <value>
                <fullName>1D Radixx Solutions International</fullName>
            </value>
            <value>
                <fullName>1E Travelsky Technology (China)</fullName>
            </value>
            <value>
                <fullName>1F INFINI Travel Information (Japa</fullName>
            </value>
            <value>
                <fullName>1G Galileo International (United S</fullName>
            </value>
            <value>
                <fullName>1H Siren-Travel (Russia)</fullName>
            </value>
            <value>
                <fullName>1I Deutsche Rettungsflugwacht (Civ</fullName>
            </value>
            <value>
                <fullName>1J Axess international (Japan)</fullName>
            </value>
            <value>
                <fullName>1K Southern Cross Distribution (Au</fullName>
            </value>
            <value>
                <fullName>1K Sutra (United States)</fullName>
            </value>
            <value>
                <fullName>1L Open Skies (United States)</fullName>
            </value>
            <value>
                <fullName>1M JSC Transport Automated Informa</fullName>
            </value>
            <value>
                <fullName>1N Navitaire (United States)</fullName>
            </value>
            <value>
                <fullName>1P WorldSpan (United States)</fullName>
            </value>
            <value>
                <fullName>1Q Sirena (Russia)</fullName>
            </value>
            <value>
                <fullName>1R Hainan Phoenix Information Syst</fullName>
            </value>
            <value>
                <fullName>1S Sabre (United States)</fullName>
            </value>
            <value>
                <fullName>1T 1Time Airline (South Africa)</fullName>
            </value>
            <value>
                <fullName>1U Polyot Sirena (Russia)</fullName>
            </value>
            <value>
                <fullName>1V Galileo International (United S</fullName>
            </value>
            <value>
                <fullName>1Y Electronic Data Systems Corpora</fullName>
            </value>
            <value>
                <fullName>1Z Sabre Pacific (Australia)</fullName>
            </value>
            <value>
                <fullName>2A Deutsche Bahn (Germany)</fullName>
            </value>
            <value>
                <fullName>2H Thalys (Belgium, France, German</fullName>
            </value>
            <value>
                <fullName>2L Helvetic Airways</fullName>
            </value>
            <value>
                <fullName>2P Air Philippines (Philippines)</fullName>
            </value>
            <value>
                <fullName>2R VIA Rail Canada (Canada)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>