GearsetPOC/force-app/main/default/objects/Trade_Sales_Account__c/fields/Information__c.field-meta.xml
<CustomField>
    <fullName>Information__c</fullName>
    <label>Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>