GearsetPOC/force-app/main/default/objects/Trade_Sales_Account__c/fields/Interline_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Interline_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interline Agreement</label>
    <type>Checkbox</type>
</CustomField>